--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "masterPortfolio",
-  "homepage": ".",
+  "name": "Bartosz Rzepala portfolio",
+  "homepage": "https://jeanpi101.github.io",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
